--- a/herbal2/res/values/strings.xml
+++ b/herbal2/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">herbal2</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="app_id">481423495239549</string>
 
 </resources>
