--- a/herbal2/res/values/strings.xml
+++ b/herbal2/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">herbal2</string>
+    <string name="app_name">走一趟青草巷</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="app_id">481423495239549</string>
